# phlcw130202

./: configure.ac
src/: Makefile.am
src/phoneless/: Makefile.am  build.sh  maketree.c  phl.h  phoneless_util.c  sort_dic.c  sort_word.c
